Issue #23629: Fix the default __sizeof__ implementation for variable-sized objects.